--- a/app/src/main/res/layout/fragment_all_favorite.xml
+++ b/app/src/main/res/layout/fragment_all_favorite.xml
@@ -15,8 +15,8 @@
         <!-- TODO: Update blank fragment layout -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/allItems"
-            productData="@{viewModel.products}"
-            tools:listitem="@layout/item_product"
+            tools:listitem="@layout/item_favorite"
+            favoriteData="@{viewModel.products}"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:spanCount="2"
             tools:itemCount="10"
