--- a/app/src/main/res/layout/fragment_detail_order.xml
+++ b/app/src/main/res/layout/fragment_detail_order.xml
@@ -250,6 +250,40 @@
                             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                             tools:itemCount="2"
                             tools:listitem="@layout/item_order_biling" />
+
+                        <View
+                            android:id="@+id/dividerTotal"
+                            android:layout_below="@id/billingItems"
+                            android:background="#F2F2F2"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"/>
+
+                        <TextView
+                            android:textColor="@color/disable_pray"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginStart="15dp"
+                            android:id="@+id/TotalText"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/dividerTotal"
+                            android:layout_alignParentStart="true"
+                            android:layout_marginTop="10dp"
+                            android:text="@string/total"
+                            android:textSize="16sp"
+                             />
+
+                        <TextView
+                            android:layout_marginEnd="20dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/dividerTotal"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginTop="10dp"
+                            android:layout_toEndOf="@+id/TotalText"
+                            android:gravity="end"
+                            android:text="@{viewModel.detailOrder.totalPriceToString()}"
+                            android:textColor="@color/dark_pray"
+                            android:textSize="16sp" />
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
 
@@ -260,7 +294,7 @@
                     app:cardElevation="5dp"
                     app:cardCornerRadius="8dp"
                     android:layout_width="match_parent"
-                    android:layout_height="500dp">
+                    android:layout_height="wrap_content">
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -275,13 +309,6 @@
                             android:text="@string/status"
                             android:textSize="16sp"
                             android:textStyle="bold" />
-                        <View
-                            android:elevation="5dp"
-                            android:id="@+id/dividerStatus"
-                            android:layout_below="@id/status"
-                            android:background="#F2F2F2"
-                            android:layout_width="match_parent"
-                            android:layout_height="2dp"/>
 
                         <TextView
                             android:layout_marginTop="15dp"
@@ -305,6 +332,27 @@
                             android:layout_marginEnd="15dp"
                             android:contentDescription="@string/image"
                             android:src="@drawable/ic_order_pending" />
+                        <View
+                            android:elevation="1dp"
+                            android:id="@+id/dividerStatus"
+                            android:layout_below="@id/status"
+                            android:background="#F2F2F2"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"/>
+
+                        <androidx.recyclerview.widget.RecyclerView
+                            android:id="@+id/deliveringState"
+                            deliveringStateData="@{viewModel.orderDeliveringState}"
+                            tools:itemCount="4"
+                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                            android:orientation="vertical"
+                            tools:listitem="@layout/item_order_delivering_state"
+                            android:layout_marginHorizontal="20dp"
+                            android:layout_marginTop="30dp"
+                            android:layout_below="@+id/dividerStatus"
+                            android:layout_width="match_parent"
+                            android:layout_marginBottom="30dp"
+                            android:layout_height="wrap_content"/>
                     </RelativeLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.appcompat.widget.AppCompatButton
