--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -127,6 +127,7 @@
                                         android:background="@drawable/bg_search"
                                         android:padding="0dp"
                                         android:hint="@string/search"
+                                        android:maxLines="1"
                                         android:text="@={viewModel.curentKeyWord}"
                                         android:textColor="@color/disable_pray" />
                                 </com.google.android.material.textfield.TextInputLayout>
@@ -187,20 +188,7 @@
                         </LinearLayout>
                     </androidx.appcompat.widget.Toolbar>
                 </androidx.constraintlayout.widget.ConstraintLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="190dp"
-                    listSearchFullFill="@{viewModel.listForDisplay}"
-                    android:layout_marginHorizontal="18dp">
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rc_search"
-                        android:layout_width="match_parent"
-                        android:layout_marginTop="10dp"
-                        listProduct="@{viewModel.listForDisplay}"
-                        android:layout_height="wrap_content"
-                        tools:listitem="@layout/item_product"/>
-                </LinearLayout>
+
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
         <RelativeLayout
@@ -238,5 +226,24 @@
                 android:layout_centerInParent="true"
                 android:src="@drawable/ic_empty" />
         </RelativeLayout>
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/scrollView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                listSearchFullFill="@{viewModel.listForDisplay}"
+                android:layout_marginHorizontal="18dp">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rc_search"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="10dp"
+                    listProduct="@{viewModel.listForDisplay}"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_product"/>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
     </LinearLayout>
 </layout>
