--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -156,6 +156,7 @@
                                         android:textStyle="bold" />
 
                                     <androidx.appcompat.widget.AppCompatButton
+                                        android:id="@+id/btn_sort_by_rating"
                                         android:layout_width="46dp"
                                         android:layout_height="25dp"
                                         android:layout_marginEnd="8dp"
@@ -166,6 +167,7 @@
                                         android:textSize="13dp" />
 
                                     <androidx.appcompat.widget.AppCompatButton
+                                        android:id="@+id/btn_sort_by_purchased"
                                         android:layout_width="69dp"
                                         android:layout_height="25dp"
                                         android:layout_marginEnd="8dp"
@@ -176,6 +178,7 @@
                                         android:textSize="13dp" />
 
                                     <androidx.appcompat.widget.AppCompatButton
+                                        android:id="@+id/btn_sort_by_price"
                                         android:layout_width="55dp"
                                         android:layout_height="25dp"
                                         android:background="@drawable/bg_btn_filter"
