--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -166,7 +166,13 @@
                                 app:layout_constraintTop_toTopOf="parent" />
 
                         </androidx.constraintlayout.widget.ConstraintLayout>
-
+                        <ProgressBar
+                            android:visibility="gone"
+                            android:id="@+id/detailProgress"
+                            android:layout_marginTop="10dp"
+                            android:layout_gravity="center"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"/>
                         <LinearLayout
                             android:layout_marginTop="10dp"
                             android:layout_width="wrap_content"
