--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -187,6 +187,8 @@
                         android:gravity="end">
 
                         <TextView
+                            android:id="@+id/totalPrice"
+                            android:text="@{viewModel.total.toString()}"
                             currencyTextData="@{viewModel.total}"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
