--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,204 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
         <variable
             name="viewModel"
             type="com.example.aposs_buyer.viewmodel.CategoriesViewModel" />
+
+        <variable
+            name="view"
+            type="android.view.View" />
+
+        <variable
+            name="loadingStatus"
+            type="com.example.aposs_buyer.utils.LoadingStatus" />
     </data>
+
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/back_ground"
+        android:orientation="vertical"
         tools:context=".uicontroler.fragment.CategoriesFragment">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/back_ground"
-        android:text="@string/app_name"
-        android:theme="@style/ThemeOverlay.AppCompat.Light"
-        app:elevation="0dp"
-        app:liftOnScroll="false">
-        <com.google.android.material.appbar.CollapsingToolbarLayout
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:expandedTitleGravity="top"
-            app:layout_scrollFlags="noScroll">
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/light_green"
-            android:gravity="bottom"
-            android:orientation="vertical">
+            android:backgroundTint="@color/back_ground"
+            android:text="@string/app_name"
+            android:theme="@style/ThemeOverlay.AppCompat.Light"
+            app:elevation="0dp"
+            app:liftOnScroll="false">
 
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#00000000"
-                app:layout_collapseMode="pin"
+                android:background="@color/light_green"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="20dp"
-                    android:gravity="center|top"
-                    android:orientation="vertical"
-                    android:paddingBottom="15dp">
+                    android:orientation="horizontal"
+                    android:paddingVertical="10dp">
 
-                    <RelativeLayout
-                        android:layout_width="match_parent"
+                    <ImageView
+                        android:id="@+id/img_back"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
                         android:layout_marginTop="10dp"
-                        android:orientation="horizontal">
+                        android:contentDescription="@string/image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/ic_back_white" />
+
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_toStartOf="@id/cl_cart"
+                        android:layout_toEndOf="@+id/img_back"
+                        android:gravity="center"
+                        android:text="@string/categories"
+                        android:textColor="@color/white"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <androidx.coordinatorlayout.widget.CoordinatorLayout
+                        android:id="@+id/cl_cart"
+                        android:layout_width="33dp"
+                        android:layout_height="30dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="5dp">
 
                         <ImageView
-                            android:id="@+id/img_back"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginTop="10dp"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:id="@+id/img_cart"
+                            android:layout_width="26dp"
+                            android:layout_height="26dp"
+                            android:layout_gravity="bottom|left"
                             android:contentDescription="@string/image"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/ic_back_white"/>
+                            android:src="@drawable/ic_cart"
+                            app:tint="@color/white"
+                            tools:ignore="RtlHardcoded" />
 
                         <TextView
-                            android:id="@+id/title"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginEnd="50dp"
-                            android:layout_alignParentTop="true"
-                            android:layout_centerHorizontal="true"
-                            android:text="@string/categories"
+                            android:layout_width="14dp"
+                            android:layout_height="14dp"
+                            android:layout_gravity="end|top"
+                            android:background="@drawable/bg_quantity_in_cart"
+                            android:text="@string/defaultCartNumber"
+                            android:textAlignment="center"
                             android:textColor="@color/white"
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
+                            android:textSize="10sp"
+                            tools:ignore="RtlCompat,SmallSp" />
+                    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
-                        <androidx.coordinatorlayout.widget.CoordinatorLayout
-                            android:id="@+id/cl_cart"
-                            android:layout_width="33dp"
-                            android:layout_height="30dp"
-                            android:layout_marginTop="5dp"
-                            android:layout_alignParentEnd="true">
-                            <ImageView
-                                android:layout_width="26dp"
-                                android:layout_height="26dp"
-                                android:layout_gravity="bottom|left"
-                                android:contentDescription="@string/image"
-                                app:tint="@color/white"
-                                android:src="@drawable/ic_cart"
-                                android:id="@+id/img_cart"
-                                tools:ignore="RtlHardcoded" />
-                            <TextView
-                                android:layout_gravity="right|top"
-                                android:layout_width="14dp"
-                                android:layout_height="14dp"
-                                android:background="@drawable/bg_quantity_in_cart"
-                                android:textSize="10dp"
-                                android:text="1"
-                                android:textAlignment="center"
-                                android:textColor="@color/white"
-                                tools:ignore="RtlCompat" />
-                        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+                    <com.google.android.material.textfield.TextInputLayout
+                        android:id="@+id/search_bar"
+                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        android:layout_width="match_parent"
+                        android:layout_height="38dp"
+                        android:layout_below="@+id/title"
+                        android:layout_marginTop="9dp"
+                        app:boxStrokeColor="@color/disable_pray"
+                        app:boxStrokeWidth="1dp"
+                        app:boxStrokeWidthFocused="2dp"
+                        app:hintAnimationEnabled="false"
+                        app:hintEnabled="false"
+                        app:startIconDrawable="@drawable/ic_search">
 
-                        <com.google.android.material.textfield.TextInputLayout
-                            android:layout_marginTop="9dp"
-                            android:id="@+id/search_bar"
-                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                        <com.google.android.material.textfield.TextInputEditText
                             android:layout_width="match_parent"
                             android:layout_height="38dp"
-                            android:layout_below="@+id/title"
-                            app:boxStrokeColor="@color/disable_pray"
-                            app:boxStrokeWidth="1dp"
-                            app:boxStrokeWidthFocused="2dp"
-                            app:hintAnimationEnabled="false"
-                            app:hintEnabled="false"
-                            app:startIconDrawable="@drawable/ic_search">
+                            android:background="@drawable/bg_search"
+                            android:editable="false"
+                            android:padding="0dp"
+                            android:text="@string/search"
+                            android:textColor="@color/disable_pray" />
+                    </com.google.android.material.textfield.TextInputLayout>
 
-                            <com.google.android.material.textfield.TextInputEditText
-                                android:layout_width="match_parent"
-                                android:layout_height="38dp"
-                                android:background="@drawable/bg_search"
-                                android:editable="false"
-                                android:padding="0dp"
-                                android:text="@string/search"
-                                android:textColor="@color/disable_pray" />
-                        </com.google.android.material.textfield.TextInputLayout>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/search_bar"
+                        android:layout_alignParentStart="true"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginEnd="10dp">
 
-                        <LinearLayout
-                            android:layout_width="match_parent"
+                        <ImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="10dp"
+                            android:contentDescription="@string/app_name"
+                            android:src="@drawable/ic_filter" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_below="@+id/search_bar"
-                            android:layout_alignParentStart="true"
-                            android:layout_marginTop="10dp"
-                            android:layout_marginEnd="10dp">
+                            android:layout_marginEnd="10dp"
+                            android:text="@string/sort_by"
+                            android:textColor="@color/white"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
 
-                            <ImageView
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_marginEnd="10dp"
-                                android:src="@drawable/ic_filter" />
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:layout_width="46dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="8dp"
+                            android:background="@drawable/bg_btn_filter"
+                            android:text="@string/rating"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white"
+                            android:textSize="13sp" />
 
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginEnd="10dp"
-                                android:text="Sort by:"
-                                android:textColor="@color/white"
-                                android:textSize="14dp"
-                                android:textStyle="bold" />
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:layout_width="69dp"
+                            android:layout_height="25dp"
+                            android:layout_marginEnd="8dp"
+                            android:background="@drawable/bg_btn_filter"
+                            android:text="@string/purchased"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white"
+                            android:textSize="13sp" />
 
-                            <androidx.appcompat.widget.AppCompatButton
-                                android:layout_width="46dp"
-                                android:layout_height="25dp"
-                                android:layout_marginEnd="8dp"
-                                android:background="@drawable/bg_btn_filter"
-                                android:text="Rating"
-                                android:textAllCaps="false"
-                                android:textColor="@color/white"
-                                android:textSize="13dp" />
-
-                            <androidx.appcompat.widget.AppCompatButton
-                                android:layout_width="69dp"
-                                android:layout_height="25dp"
-                                android:layout_marginEnd="8dp"
-                                android:background="@drawable/bg_btn_filter"
-                                android:text="Purchased"
-                                android:textAllCaps="false"
-                                android:textColor="@color/white"
-                                android:textSize="13dp" />
-
-                            <androidx.appcompat.widget.AppCompatButton
-                                android:layout_width="55dp"
-                                android:layout_height="25dp"
-                                android:background="@drawable/bg_btn_filter"
-                                android:text="Product"
-                                android:textAllCaps="false"
-                                android:textColor="@color/white"
-                                android:textSize="13dp" />
-                        </LinearLayout>
-                    </RelativeLayout>
-                </LinearLayout>
+                        <androidx.appcompat.widget.AppCompatButton
+                            android:layout_width="55dp"
+                            android:layout_height="25dp"
+                            android:background="@drawable/bg_btn_filter"
+                            android:text="@string/product"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white"
+                            android:textSize="13sp" />
+                    </LinearLayout>
+                </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-            <LinearLayout
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical"
+            android:paddingHorizontal="10dp">
+
+            <ProgressBar
+                android:layout_centerInParent="true"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_gravity="center"
+                android:visibility="@{viewModel.status == loadingStatus.Loading? view.VISIBLE:view.GONE}" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rc_category"
+                detailCategories="@{viewModel.lstCategory}"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="160dp"
-                android:paddingHorizontal="10dp">
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rc_category"
-                    android:layout_width="match_parent"
-                    detailCategories="@{viewModel.lstCategory}"
-                    android:layout_height="wrap_content"
-                    tools:listitem="@layout/item_category"/>
-            </LinearLayout>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
-    </com.google.android.material.appbar.AppBarLayout>
+                android:orientation="vertical"
+                android:visibility="@{viewModel.status == loadingStatus.Success? view.VISIBLE:view.GONE}"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/item_category" />
+        </RelativeLayout>
     </LinearLayout>
 </layout>
